# d-transfer

./: .gitignore  DESIGN.md  LICENSE  README.md  REPO_STANDARDS.md  dtransfer-teknik-dokuman-v2_1.md  env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: FUNDING.yml
public/fonts/: README.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs
src-tauri/src/audit/: engine.rs  masking.rs  mod.rs  redacted.rs  schema.rs
src-tauri/src/cancellation/: mod.rs
src-tauri/src/diagnostics/: limits.rs  metrics.rs  mod.rs  retention.rs
src-tauri/src/engine/: mod.rs  progress.rs  transfer_engine.rs  types.rs
src-tauri/src/events/: mod.rs
src-tauri/src/fs_edge/: case_conflict.rs  mod.rs  normalized_path.rs  path_length.rs  sanitize.rs  symlink.rs
src-tauri/src/network/: keepalive.rs  mod.rs  proxy.rs
src-tauri/src/profiles/: connection_manager.rs  connection_profile.rs  credentials.rs  mod.rs
src-tauri/src/protocols/: adapter.rs  local.rs  mod.rs  noop.rs  sftp.rs  types.rs
src-tauri/src/queue/: db_actor.rs  mod.rs  recovery.rs  recovery_tests.rs  schema.rs  state_machine.rs  task.rs
src-tauri/src/rate_limit/: mod.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/settings/: mod.rs
src/components/: AdapterProbe.vue  AppShell.vue  DebugBar.vue  DualPane.vue  LocalPane.vue  ProfileDialog.vue  ProfileSidebar.vue  QueuePanel.vue  RemotePane.vue  SettingsPanel.vue  TitleBar.vue  TransferProbe.vue
src/components/widgets/: FieldNumber.vue  FieldSegmented.vue  FieldToggle.vue
src/composables/: useEngine.ts  useEngineEvents.ts  useLocalBrowser.ts  useRemoteBrowser.ts  useSettingsPanel.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  tr.json
src/stores/: connection.ts  debug.ts  liveProgress.ts  locale.ts  profiles.ts  queue.ts  settings.ts  theme.ts  transferTargets.ts
src/styles/: fonts.css  main.css
src/types/: index.ts
src/utils/: format.ts
