[package]
name = "dtransfer"
version = "0.1.0-dev"
description = "DTransfer — deterministic, crash-resilient transfer infrastructure client"
authors = ["Orhan Engin OKAY"]
license = "GPL-3.0-or-later"
repository = "https://github.com/AmrasElessar/d-transfer"
edition = "2021"
rust-version = "1.78"

[lib]
name = "dtransfer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# --- Tauri runtime ---
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-single-instance = "2.0"  # Bölüm 6 — zorunlu, multi-instance queue/rate quota çarpışmasını önler

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Async runtime (Bölüm 9.5) ---
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["fs"] }
async-stream = "0.3"
futures = "0.3"
async-trait = "0.1"

# --- Errors / tracing (Bölüm 10, 35) ---
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# --- Utilities ---
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.20"
num_cpus = "1.16"

# --- Filesystem Edge-Case (Bölüm 12) ---
unicode-normalization = "0.1"

# --- Queue persistence (Bölüm 15) ---
# `bundled` SQLite versiyon farklarını eler — Bölüm 7 v1.14 notu: sistem
# kütüphanesine bağımlılık "user'da çalışmıyor" bug yatağı yaratır.
rusqlite = { version = "0.32", features = ["bundled", "blob", "backup", "chrono"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# --- Credential vault (Bölüm 25.1) ---
# Windows Credential Manager / macOS Keychain / Linux Secret Service (D-Bus).
# Linux D-Bus yoksa PlatformFailure döner; Faz 5'te file fallback eklenecek.
keyring = "3"

# --- SFTP backend (Bölüm 11.1) ---
# russh 0.54 + russh-sftp 2.1 birlikte test edilmiş ailenin son stable çifti.
# Spec'te 0.46 anıldı; o sürüm crates.io'dan kaldırılmış. 0.54 API surface
# (`PrivateKeyWithHashAlg::new(Arc<PrivateKey>, Option<HashAlg>)`,
# `authenticate_password(...).await?.success()`) bizim kullanımımıza uygun.
# `russh-keys` 0.50+ itibarıyla `russh::keys` modülüne folded — ayrı bir
# dependency gerekmez.
#
# `default-features = false` + `ring` — Windows toolchain'inde aws-lc-sys
# NASM gerektiriyor (toolchain assumption), `ring` ile bağımsız crypto.
# Flate2 packet compression Bölüm 9.2 throughput için yararlı, korunur.
russh = { version = "0.54", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.1"

[dev-dependencies]
tempfile = "3.13"
tokio = { version = "1.41", features = ["full", "test-util"] }

[features]
# Cargo feature flags per Bölüm 7. v1.0 yalnızca skeleton, asıl adapter implementasyonları Faz 2'de.
default = ["sftp", "s3", "webdav"]
sftp = []
s3 = []
webdav = []

# Iyileştirmeler
[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
